@@ -1,3 +1,8 @@
+2005-07-13  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/goption.c (g_option_group_add_entries): Warn if a
+	short name is not acceptable.
+
 2005-07-12  Matthias Clasen  <mclasen@redhat.com>
 
 	* glib/goption.h (G_OPTION_FLAG_NOALIAS): 
