@@ -316,7 +316,9 @@ g_option_context_add_main_entries() or g_option_group_add_entries().
   specify the option as 
   --<replaceable>groupname</replaceable>-<replaceable>long_name</replaceable>.
 @short_name: If an option has a short name, it can be specified
-  -<replaceable>short_name</replaceable> in a commandline.
+  -<replaceable>short_name</replaceable> in a commandline. @short_name must be 
+  a printable ASCII character different from '-', or zero if the option has no
+  short name.
 @flags: Flags from #GOptionFlags.
 @arg: The type of the option, as a #GOptionArg.
 @arg_data:  If the @arg type is %G_OPTION_ARG_CALLBACK, then @arg_data must 
